--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
     <p>联系人：于小姐</p>
     <p>联系电话：13923866068</p>
     <div class="img">
-        <div class="img-container horizontal"><img src="static/h1.jpeg"></div>
-        <div class="img-container horizontal"><img src="static/h2.jpeg"></div>
-        <div class="img-container horizontal"><img src="static/h3.jpeg"></div>
-        <div class="img-container vertical"><img src="static/v1.jpeg"></div>
-        <div class="img-container vertical"><img src="static/v2.jpeg"></div>
-        <div class="img-container vertical"><img src="static/v3.jpeg"></div>
-        <div class="img-container vertical"><img src="static/v4.jpeg"></div>
-        <div class="img-container vertical"><img src="static/v5.jpeg"></div>
-        <div class="img-container vertical"><img src="static/v6.jpeg"></div>
+        <div class="img-container horizontal"><img src="http://onkmsz5cp.bkt.clouddn.com/h1.jpeg"></div>
+        <div class="img-container horizontal"><img src="http://onkmsz5cp.bkt.clouddn.com/h2.jpeg"></div>
+        <div class="img-container horizontal"><img src="http://onkmsz5cp.bkt.clouddn.com/h3.jpeg"></div>
+        <div class="img-container vertical"><img src="http://onkmsz5cp.bkt.clouddn.com/v1.jpeg"></div>
+        <div class="img-container vertical"><img src="http://onkmsz5cp.bkt.clouddn.com/v2.jpeg"></div>
+        <div class="img-container vertical"><img src="http://onkmsz5cp.bkt.clouddn.com/v3.jpeg"></div>
+        <div class="img-container vertical"><img src="http://onkmsz5cp.bkt.clouddn.com/v4.jpeg"></div>
+        <div class="img-container vertical"><img src="http://onkmsz5cp.bkt.clouddn.com/v5.jpeg"></div>
+        <div class="img-container vertical"><img src="http://onkmsz5cp.bkt.clouddn.com/v6.jpeg"></div>
     </div>
 </div>
 <script>
